--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,13 +1,13 @@
-version: "2"
+version: "3"
 
 services:
 
-  web2004-php7:
+  web2022-php8:
     build:
       context: .
-      dockerfile: ./2004/Dockerfile
+      dockerfile: ./2022/Dockerfile
       args:
-        - PHP_VERSION=7.4
+        - PHP_VERSION=8.3
     environment:
       - MYSQL_ADMIN_PASS=password
     ports:
@@ -16,16 +16,30 @@ services:
     tmpfs:
       - /var/lib/mysql
 
-  web2004-php8:
-    build:
-      context: .
-      dockerfile: ./2004/Dockerfile
-      args:
-        - PHP_VERSION=8.0
-    environment:
-      - MYSQL_ADMIN_PASS=password
-    ports:
-      - "3040:80"
-      - "3041:3306"
-    tmpfs:
-      - /var/lib/mysql
+#  web2004-php7:
+#    build:
+#      context: .
+#      dockerfile: ./2004/Dockerfile
+#      args:
+#        - PHP_VERSION=7.4
+#    environment:
+#      - MYSQL_ADMIN_PASS=password
+#    ports:
+#      - "3030:80"
+#      - "3031:3306"
+#    tmpfs:
+#      - /var/lib/mysql
+#
+#  web2004-php8:
+#    build:
+#      context: .
+#      dockerfile: ./2004/Dockerfile
+#      args:
+#        - PHP_VERSION=8.0
+#    environment:
+#      - MYSQL_ADMIN_PASS=password
+#    ports:
+#      - "3040:80"
+#      - "3041:3306"
+#    tmpfs:
+#      - /var/lib/mysql
